# moveit_task_constructor

core/: CMakeLists.txt  package.xml
core/include/moveit/task_constructor/: action_base.h  task.h
core/include/moveit/task_constructor/stages/: action_base.h  deep_grasp_generator.h  deep_grasp_pose.h  generic_grasp_pose.h  gpd_generator.h
core/python/wrapper/src/: core.cpp
core/src/: CMakeLists.txt  properties.cpp  task.cpp
core/src/stages/: CMakeLists.txt  compute_ik.cpp  deep_grasp_generator.cpp  generate_grasp_pose.cpp  generic_grasp_pose.cpp  gpd_generator.cpp  pick.cpp
demo/: CMakeLists.txt  package.xml
demo/include/moveit_task_constructor_demo/: gpd_pick_place_task.h  pick_place_task.h  pick_task.h
demo/launch/: demo.launch  gdb_settings.gdb  gpd_demo.launch  pickplace.launch  picktask.launch
demo/src/: gpd_pick_place_demo.cpp  gpd_pick_place_task.cpp  pick_demo.cpp  pick_place_task.cpp  pick_task.cpp
msgs/: CMakeLists.txt
msgs/action/: GenerateDeepGraspPose.action
